--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "target": "ES2022",
     "module": "commonjs",
     "lib": ["es6", "ES2021.String"],
@@ -12,10 +12,6 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "inlineSources": true,
-
-    // Set `sourceRoot` to  "/" to strip the build path prefix
-    // from generated source code references.
-    // This improves issue grouping in Sentry.
     "sourceRoot": "/"
   }
 }
