--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
@@ -24,6 +27,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "@types/pg": "^8.11.6",
     "eslint": "^8.57.0",
     "globals": "^15.2.0",
     "prettier": "3.2.5",
