--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
+    "stripe": "^15.10.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
