--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^8.2.2",
     "config": "^3.3.11",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
