Updated .env file

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ DATABASE_HOST=ep-restless-darkness-a1po9zip.ap-southeast-1.aws.neon.tech
 DATABASE_PORT=5432
 DATABASE_CLIENT=postgres  
 
-DOMAIN=https://main--candid-valkyrie-f24674.netlify.app/success
+DOMAIN=https://gym-up.netlify.app/success
 
 PORT=5000
